tests: Missing ref images for new recording-surface test
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>

--- a/test/Makefile.refs
+++ b/test/Makefile.refs
@@ -1000,11 +1000,14 @@ REFERENCE_IMAGES = \
 	recording-surface-over.ps.rgb24.ref.png \
 	recording-surface-over.quartz.argb32.ref.png \
 	recording-surface-over.quartz.rgb24.ref.png \
+	recording-surface-over.ref.png \
 	recording-surface-over.rgb24.ref.png \
 	recording-surface-over.svg.argb32.ref.png \
 	recording-surface-over.svg.rgb24.ref.png \
 	recording-surface-over.xlib.argb32.ref.png \
 	recording-surface-over.xlib.rgb24.ref.png \
+	recording-surface-source.argb32.ref.png \
+	recording-surface-source.rgb24.ref.png \
 	rectangle-rounding-error.ref.png \
 	rectilinear-dash.quartz.xfail.png \
 	rectilinear-dash.ref.png \
