tests: Another missing ref, this time clip-disjoint-hatching
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>

--- a/test/Makefile.refs
+++ b/test/Makefile.refs
@@ -97,6 +97,7 @@ REFERENCE_IMAGES = \
 	clip-contexts.ref.png \
 	clip-device-offset.argb32.ref.png \
 	clip-device-offset.rgb24.ref.png \
+	clip-disjoint-hatching.ref.png \
 	clip-disjoint.image16.ref.png \
 	clip-disjoint.ps.ref.png \
 	clip-disjoint.quartz.ref.png \
