test: Add horizontal clip test
Doesn't actually hit the code path but it should...

Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>

--- a/test/Makefile.sources
+++ b/test/Makefile.sources
@@ -132,6 +132,7 @@ test_sources = \
 	half-coverage.c					\
 	halo.c						\
 	hatchings.c					\
+	horizontal-clip.c				\
 	huge-linear.c					\
 	huge-radial.c					\
 	image-surface-source.c				\
