test: Add an test case to exercise overlapping caps between dash segments
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>

--- a/test/Makefile.refs
+++ b/test/Makefile.refs
@@ -861,6 +861,7 @@ REFERENCE_IMAGES = \
 	over-between-source.svg12.rgb24.xfail.png \
 	over-between-source.xlib.ref.png \
 	over-between-source.xlib.rgb24.ref.png \
+	overlapping-dash-caps.ref.png \
 	overlapping-glyphs.argb32.ref.png \
 	overlapping-glyphs.pdf.argb32.xfail.png \
 	overlapping-glyphs.pdf.rgb24.xfail.png \
