perf: Add hash table benchmark
A benchmark to test the speed of hash tables when inserting and
removing a huge number of elements.

Although originally hash tables were assumed not to get many
deletions, in practice they are now being used as caches in multiple
places. This means that they often have a fixed number of live
elements and an element is evicted whenever a new element is inserted
(this happens explicitly for cairo_cache_t objects, but also, for
example, in scaled_font_map + holdovers). This access pattern is very
inefficient with the current implementation.

--- a/perf/micro/Makefile.sources
+++ b/perf/micro/Makefile.sources
@@ -5,6 +5,7 @@ libcairo_perf_micro_sources = \
 	disjoint.c		\
 	fill.c			\
 	hatching.c		\
+	hash-table.c		\
 	long-lines.c		\
 	mosaic.c		\
 	paint.c			\
