perf: Also build the code in perf/micro
This fixes weird and occasional build failures when updating the source, e.g.:

cairo-perf-micro.o:(.rodata+0xb0): undefined reference to `hash_table'

Signed-off-by: Uli Schlachter <psychon@znc.in>

--- a/perf/Makefile.am
+++ b/perf/Makefile.am
@@ -12,6 +12,8 @@ AM_CPPFLAGS =					\
 
 AM_LDFLAGS = $(CAIRO_LDFLAGS)
 
+SUBDIRS = micro
+
 noinst_PROGRAMS = cairo-perf-trace cairo-perf-micro
 
 EXTRA_PROGRAMS += cairo-perf-micro \
