test: Add join-star, another stroker exercise
A simple convex shape, useful for debugging.

Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>

--- a/test/Makefile.refs
+++ b/test/Makefile.refs
@@ -653,6 +653,7 @@ REFERENCE_IMAGES = \
 	inverse-text.ps.ref.png \
 	inverse-text.quartz.ref.png \
 	inverse-text.ref.png \
+	joins-star.ref.png \
 	joins.image16.ref.png \
 	joins.ps.ref.png \
 	joins.quartz.ref.png \
