test: Add joins-retrace
The complexity in this shape is that the stroke is reversed upon
itself and retraces the same path in the opposite direction.

Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>

--- a/test/Makefile.refs
+++ b/test/Makefile.refs
@@ -654,6 +654,7 @@ REFERENCE_IMAGES = \
 	inverse-text.quartz.ref.png \
 	inverse-text.ref.png \
 	joins-loop.ref.png \
+	joins-retrace.ref.png \
 	joins-star.ref.png \
 	joins.image16.ref.png \
 	joins.ps.ref.png \
