perf: Add many-strokes
An intersection variant to exercise the stroker with many, many lines. A
silly benchmark, but a popular one in the wild.

Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>

--- a/perf/micro/Makefile.sources
+++ b/perf/micro/Makefile.sources
@@ -28,6 +28,7 @@ libcairo_perf_micro_sources = \
 	dragon.c		\
 	pythagoras-tree.c	\
 	intersections.c		\
+	many-strokes.c		\
 	spiral.c		\
 	$(NULL)
 
