perf: Add many-fills
A variant of many-strokes tries to answer the question of how much
overhead is there in stroking, i.e. if we fill an equivalent path to a
set of strokes, do we see an equivalence in performance?

Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>

--- a/perf/micro/Makefile.sources
+++ b/perf/micro/Makefile.sources
@@ -29,6 +29,7 @@ libcairo_perf_micro_sources = \
 	pythagoras-tree.c	\
 	intersections.c		\
 	many-strokes.c		\
+	many-fills.c		\
 	spiral.c		\
 	$(NULL)
 
