--- a/src/Makefile.sources
+++ b/src/Makefile.sources
@@ -55,6 +55,7 @@ cairo_private = \
 	cairo-analysis-surface-private.h \
 	cairo-arc-private.h \
 	cairo-atomic-private.h \
+	cairo-backend-private.h \
 	cairo-box-private.h \
 	cairo-boxes-private.h \
 	cairo-cache-private.h \
