perf: add many-curves
Continuing the theme of stressing the tessellators, draw lots of Bezier
curves!

Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>

--- a/perf/micro/Makefile.sources
+++ b/perf/micro/Makefile.sources
@@ -30,6 +30,7 @@ libcairo_perf_micro_sources = \
 	intersections.c		\
 	many-strokes.c		\
 	many-fills.c		\
+	many-curves.c		\
 	spiral.c		\
 	$(NULL)
 
