test: Add record-extend
Exercise the extend modes with a clipped paint, because once upon a time
we had a bug...

Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>

--- a/test/Makefile.refs
+++ b/test/Makefile.refs
@@ -1010,6 +1010,10 @@ REFERENCE_IMAGES = \
 	random-intersections-nonzero.quartz.ref.png \
 	random-intersections-nonzero.ref.png \
 	random-intersections-nonzero.xlib.ref.png \
+	record-extend-none.ref.png \
+	record-extend-pad.ref.png \
+	record-extend-reflect.ref.png \
+	record-extend-repeat.ref.png \
 	record-fill-alpha.ref.png \
 	record-paint-alpha-clip-mask.ref.png \
 	record-paint-alpha-clip.ref.png \
