perf/micro: Test wide vs hairline strokes
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>

--- a/perf/micro/Makefile.sources
+++ b/perf/micro/Makefile.sources
@@ -29,7 +29,9 @@ libcairo_perf_micro_sources = \
 	pythagoras-tree.c	\
 	intersections.c		\
 	many-strokes.c		\
+	wide-strokes.c		\
 	many-fills.c		\
+	wide-fills.c		\
 	many-curves.c		\
 	curve.c			\
 	spiral.c		\
