perf/micro: diagonal lines
The ideal benchmark for spans?...

Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>

--- a/perf/micro/Makefile.sources
+++ b/perf/micro/Makefile.sources
@@ -6,6 +6,7 @@ libcairo_perf_micro_sources = \
 	fill.c			\
 	hatching.c		\
 	hash-table.c		\
+	line.c			\
 	long-lines.c		\
 	mosaic.c		\
 	paint.c			\
