--- a/test/Makefile.refs
+++ b/test/Makefile.refs
@@ -11,6 +11,7 @@ REFERENCE_IMAGES = \
 	a1-clip-stroke.ref.png \
 	a1-image-sample.gl.xfail.png \
 	a1-image-sample.ref.png \
+	a1-line-width.ref.png \
 	a1-mask-sample.ref.png \
 	a1-mask.ref.png \
 	a1-rasterisation-rectangles.quartz.xfail.png \
