stroke: move normal stroker to new file
Step 1 of enhancing the speed of the stroker is to segregate from the
rest of the complex code.

Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>

--- a/src/Makefile.sources
+++ b/src/Makefile.sources
@@ -164,6 +164,7 @@ cairo_sources = \
 	cairo-path-in-fill.c \
 	cairo-path-stroke.c \
 	cairo-path-stroke-boxes.c \
+	cairo-path-stroke-polygon.c \
 	cairo-pattern.c \
 	cairo-pen.c \
 	cairo-polygon.c \
