test: Add record-mesh
Test capture and replay of mesh patterns.

Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>

--- a/test/Makefile.refs
+++ b/test/Makefile.refs
@@ -1024,6 +1024,7 @@ REFERENCE_IMAGES = \
 	record-extend-reflect.ref.png \
 	record-extend-repeat.ref.png \
 	record-fill-alpha.ref.png \
+	record-mesh.ref.png \
 	record-paint-alpha-clip-mask.ref.png \
 	record-paint-alpha-clip.ref.png \
 	record-paint-alpha-solid-clip.ref.png \
