--- a/test/Makefile.refs
+++ b/test/Makefile.refs
@@ -1019,9 +1019,13 @@ REFERENCE_IMAGES = \
 	random-intersections-nonzero.quartz.ref.png \
 	random-intersections-nonzero.ref.png \
 	random-intersections-nonzero.xlib.ref.png \
+	record-extend-none-similar.ref.png \
 	record-extend-none.ref.png \
+	record-extend-pad-similar.ref.png \
 	record-extend-pad.ref.png \
+	record-extend-reflect-similar.ref.png \
 	record-extend-reflect.ref.png \
+	record-extend-repeat-similar.ref.png \
 	record-extend-repeat.ref.png \
 	record-fill-alpha.ref.png \
 	record-mesh.ref.png \
