test: Add big-little-box
This exercises the bug

  https://bugzilla.mozilla.org/show_bug.cgi?id=668921

which is caused by a failure to tighten the extents after tessellating
the path and the unbounded fixup is skipped as it is believed the path
covers the whole area.

Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>

--- a/test/Makefile.sources
+++ b/test/Makefile.sources
@@ -15,6 +15,7 @@ test_sources = \
 	arc-looping-dash.c				\
 	api-special-cases.c				\
 	big-line.c					\
+	big-little-box.c				\
 	big-trap.c					\
 	bilevel-image.c					\
 	bug-bo-rectangular.c				\
