observer: record all operations and their timings
The immediate use of this is to print out the slowest operation of each
type in a replayable manner. A continuing demonstration of how we may
analyse traces...

Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>

--- a/src/Makefile.sources
+++ b/src/Makefile.sources
@@ -389,6 +389,7 @@ cairo_drm_sources = drm/cairo-drm.c \
 cairo_gallium_sources = drm/cairo-drm-gallium-surface.c
 
 cairo_script_headers = cairo-script.h
+cairo_script_private = cairo-script-private.h
 cairo_script_sources = cairo-script-surface.c
 
 cairo_tee_headers = cairo-tee.h
